@@ -43,8 +43,9 @@ This module requires these other modules and libraries:
 
 In order to build it from source, you'll also need
 
-  ExtUtils::PkgConfig (perl module)
-  ExtUtils::Depends (perl module)
+  ExtUtils::PkgConfig >= 0.2
+  ExtUtils::Depends   >= 1.0
+  Test::Number::Delta >= 1.0
 
 BUG REPORTS
 -----------
